cambios pagina endgame

--- a/html/ENDGAME.html
+++ b/html/ENDGAME.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/Estiloend.css">
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymus"></script>
 	<title>ENDGAME</title>
 </head>
+
 <body>
 	<header>
 		<div class="contenedor">
 			<h2 class="logo">PELISFREE</h2>
 			<nav>
 				<a href="../index.html" class="activo">Inicio</a>
-				
+
 				<div class="dropdown">
 					<button class="dropbtn">Mi Lista</button>
 					<div class="dropdown-content">
@@ -26,17 +30,23 @@
 					</div>
 				</div>
 			</nav>
-		</div>	
+		</div>
 	</header>
 	<main>
 		<div class="pelicula-principal">
 			<div class="contenedor">
 				<h3 class="titulo">Avengers: End Game</h3>
 				<p class="descripcion">
-					Después de los eventos devastadores de "Avengers: Infinity War", el universo está en ruinas debido a las acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán reunirse una vez más para intentar detenerlo y restaurar el orden en el universo de una vez por todas.
+					Después de los eventos devastadores de "Avengers: Infinity War", el universo está en ruinas debido a
+					las acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores
+					deberán reunirse una vez más para intentar detenerlo y restaurar el orden en el universo de una vez
+					por todas.
 				</p>
-				<button class="boton"><i class="fas fa-play"></i><a href="https://youtube.com/watch?v=znk2OICHbjY" class="botoness" target="_blank">Reproducir</a></button>
-				<button class="boton"><i class="fas fa-info-circle"></i><a href="https://es.wikipedia.org/wiki/Avengers:_Endgame" class="botoness" target="_blank">Mas información</a></button>
+				<button class="boton"><i class="fas fa-play"></i><a href="https://youtube.com/watch?v=znk2OICHbjY"
+						class="botoness" target="_blank">Reproducir</a></button>
+				<button class="boton"><i class="fas fa-info-circle"></i><a
+						href="https://es.wikipedia.org/wiki/Avengers:_Endgame" class="botoness" target="_blank">Mas
+						información</a></button>
 			</div>
 		</div>
 		<div class="peliculas-recomendadas contenedor">
@@ -46,16 +56,16 @@
 			<div class="contenedor-principal">
 				<div class="contenedor-carousel">
 					<div class="carousel">
-						<div class="pelicula">	
+						<div class="pelicula">
 							<a href="DOCTOR STRANGE.html"><img src="../imágenes/poster-strange2.jpg"></a>
 						</div>
-						<div class="pelicula">	
+						<div class="pelicula">
 							<a href="NO WAY HOME.html"><img src="../imágenes/poster-nowayhome.jpg"></a>
 						</div>
-						<div class="pelicula">	
+						<div class="pelicula">
 							<a href="VENOM.html"><img src="../imágenes/poster-venom.jpg"></a>
 						</div>
-						<div class="pelicula">	
+						<div class="pelicula">
 							<a href="SPIDERMAN2.html"><img src="../imágenes/poster-amazing2.jpg"></a>
 						</div>
 					</div>
@@ -63,5 +73,23 @@
 			</div>
 		</div>
 	</main>
+	<footer>
+		<div class="footer-content">
+			<p>Página editada por Gianfranco Limas</p>
+			
+			<ul>
+				<li>Email: glimascapillo@gmail.com</li>
+				<li style="margin-top: 5px;">
+					<a  href="https://www.linkedin.com/in/gianfranco-limas/" target="_blank">
+						<i class="fab fa-linkedin"></i>
+					</a>
+					<a href="https://github.com/xlSosdee" target="_blank">
+						<i class="fab fa-github"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</footer>
 </body>
+
 </html>
